--- a/Home Value Insight – Predicting House Prices Using Regression/main.ipynb
+++ b/Home Value Insight – Predicting House Prices Using Regression/main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Project Goal: \n",
-    "- The goal of this project is to analyze a country's obesity rate over time and build a linear regression model trained on historical data. This model will be used to predict future obesity rates, providing insights into national health trends and aiding in potential public health planning and intervention.\n",
+    "- The goal of this project is to analyze key property features and build a linear regression model trained on historical housing data. This model is designed to predict house prices based on attributes such as size, amenities, and other structural factors—providing valuable insights for real estate valuation, investment analysis, and market trend forecasting.\n",
     "\n",
     "- Create a model using Sklearn\n",
     "\n",
