--- a/1. Home Value Insight – Predicting House Prices Using Scikit-learn Regression/main.ipynb
+++ b/1. Home Value Insight – Predicting House Prices Using Scikit-learn Regression/main.ipynb
@@ -8,7 +8,7 @@
     "## Project Goal: \n",
     "- The goal of this project is to analyze key property features and build a linear regression model trained on historical housing data. This model is designed to predict house prices based on attributes such as size, amenities, and other structural factors—providing valuable insights for real estate valuation, investment analysis, and market trend forecasting.\n",
     "\n",
-    "- Create a model using Sklearn\n",
+    "- Create a Linear Regression model using Sklearn\n",
     "\n",
     "- Identify the R-squared\n",
     "\n",
